=======
HISTORY
=======

1.2.11 (unreleased)
-------------------

- Removed comma at the end of a dict in tiny_mce_init.js. This fixes javascript
  error on IE7. This was broken in 1.2.10.
  [vincentfretin]


1.2.10 (2012-01-29)
-------------------

- Fixed AttributeError: 'ATDocumentFieldsView' object has no attribute
  'absolute_url' when using inline editing.  Inline editing then still
  does not work though (checked on Plone 4.2 dev).
  [maurits]

- Fixed a few test failures in combination with five.pt.
  [maurits]

- Do not fail with an AttributeError when the member has no
  wysiwyg_editor property.
  Fixes http://dev.plone.org/ticket/12406
  [maurits]

- Initialize TinyMCE with "media_strict: false" to allow embed tags if
  they are removed from the list of nasty tags.
  Fixeѕ https://dev.plone.org/ticket/10681
  [rochecompaan]

- Updated Spanish translation
  [hvelarde]


1.2.9 (2011-11-24)
------------------

- Fixed content_css when the Plone Site id is 'plone'.  This is used
  to display the text during editing in the same layout as it appears
  when viewing.
  Fixes http://dev.plone.org/plone/ticket/11430
  [maurits]

- Add value attributes to Insert and Cancel input tags for the ploneimage popup
  template.  When Chameleon is installed attributes that don't already exist on
  a tag don't get translated.
  [swampmonkey]

- Include Products.CMFCore's permissions.zcml to ensure Plone 4.1 compatibility.
  [thomasdesvenain]

- Use aq_parent instead of getParentNode for Zope trunk compatibility.
  [elro]

- Display error message when uploading a file with a name consisting
  only of spaces.
  Fixes http://dev.plone.org/plone/ticket/10394
  [maurits]

- Search does not work with Virtual Hosting (close #10308)
  [keul] [mamico]

1.2.8 (2011-09-19)
------------------

- Fixed js error that made alternative editors unusable.
  Ref http://dev.plone.org/plone/ticket/12045.
  [thomasdesvenain]
